2011-05-21 COAH96KoxU <queue glasscore.net>

	* release 0